# sbe

./: .gitignore  CMakeLists.txt  README.md
cmake/: SBEMakeCodec.cmake
